@@ -1,8 +1,6 @@
-
 // -*- C++ -*-
 // $Id$
 // Definition for Win32 Export directives.
-// This file is generated automatically by generate_export_file.pl DAnCE_Locality_Handler
 // ------------------------------
 #ifndef DANCE_LOCALITY_HANDLER_EXPORT_H
 #define DANCE_LOCALITY_HANDLER_EXPORT_H
